--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "qunit": "~1.17.1",
     "materialize": "~0.96.1",
     "ember-simple-auth": "0.8.0",
-    "URIjs": "~1.15.1"
+    "URIjs": "~1.15.1",
+    "ember-cli-moment-shim": "~0.1.0"
   }
 }
