--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.7",
+    "ember-cli-accounting": "0.1.2",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-chrome": "0.0.6",
     "ember-cli-coffeescript": "0.11.0",
     "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dates": "1.1.2",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-emblem": "0.2.7",
+    "ember-cli-font-awesome": "0.0.9",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
